--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -38,6 +38,22 @@
                 </div>
             </div>
 
+            <div class="form-group row">
+                <label class="col-4 col-form-label">Username: </label>
+                <div class="col-8">
+                    <input type="text" th:field="*{username}" class="form-control"
+                           required minlength="2" maxlength="20" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-4 col-form-label">Password: </label>
+                <div class="col-8">
+                    <input type="password" th:field="*{password}" class="form-control"
+                           required minlength="6" maxlength="10"/>
+                </div>
+            </div>
+
             <div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
             </div>
