--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -29,7 +29,7 @@
                 <th>Initial Price</th>
                 <th>Volume</th>
                 <th>Market Capitalization</th>
-                <th>Buy</th>
+                <th>Market Buy</th>
             </tr>
             </thead>
             <tbody>
@@ -41,6 +41,7 @@
 
                 <td>
                     <form action="#" th:action="@{/buy}" method="post">
+                        <input type="number" name="amount" step="1" min="1">
                         <input type="hidden" name="thisStock" th:value="${stock.ticker}"/>
                         <input type="submit" value="Buy"/>
                     </form>
