--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -28,8 +28,11 @@
                 <th>Stock Ticker</th>
                 <th>Initial Price</th>
                 <th>Volume</th>
-                <th>Market Capitalization</th>
+                <th>Market Cap</th>
                 <th>Market Buy</th>
+                <th>Market Sell</th>
+                <th>Limit Buy</th>
+                <th>Limit Sell</th>
             </tr>
             </thead>
             <tbody>
@@ -37,13 +40,46 @@
                 <td th:text="${stock.ticker}">Stock Ticker</td>
                 <td th:text="${stock.init_price}">Initial Price</td>
                 <td th:text="${stock.volume}">Volume</td>
-                <td th:text="${stock.volume} * ${stock.init_price}">Market Capitalization</td>
+                <td th:text="${stock.volume} * ${stock.init_price}">Market Cap</td>
 
                 <td>
-                    <form action="#" th:action="@{/buy}" method="post">
-                        <input type="number" name="amount" step="1" min="1">
+                    <form action="#" th:action="@{/marketBuy}" method="post">
+                        <label>Amount: </label>
+                        <input type="number" name="marketBuyAmount" style="width: 75px" step="1" min="1">
                         <input type="hidden" name="thisStock" th:value="${stock.ticker}"/>
                         <input type="submit" value="Buy"/>
+                    </form>
+                </td>
+                <td>
+                    <form action="#" th:action="@{/marketSell}" method="post">
+                        <label>Amount: </label>
+                        <input type="number" name="marketSellAmount" style="width: 75px" step="1" min="1">
+                        <input type="hidden" name="thisStock" th:value="${stock.ticker}"/>
+                        <input type="submit" value="Sell"/>
+                    </form>
+                </td>
+                <td>
+                    <form action="#" th:action="@{/limitBuy}" method="post">
+                        <label>Desired Price: </label>
+                        <input type="number" name="limitBuyPrice" style="width: 75px">
+                        <label>Amount: </label>
+                        <input type="number" name="limitBuyAmount" style="width: 75px" step="1" min="1">
+                        <input type="hidden" name="thisStock" th:value="${stock.ticker}"/></br>
+                        <label>Exp Date: </label>
+                        <input type="date" name="limitBuyDate"></br>
+                        <input type="submit" value="Buy"/>
+                    </form>
+                </td>
+                <td>
+                    <form action="#" th:action="@{/limitSell}" method="post">
+                        <label>Desired Price: </label>
+                        <input type="number" name="limitSellPrice" style="width: 75px">
+                        <label>Amount: </label>
+                        <input type="number" name="limitSellAmount" style="width: 75px" step="1" min="1">
+                        <input type="hidden" name="thisStock" th:value="${stock.ticker}"/></br>
+                        <label>Exp Date: </label>
+                        <input type="date" name="limitSellDate"></br>
+                        <input type="submit" value="Sell"/>
                     </form>
                 </td>
             </tr>
@@ -52,22 +88,33 @@
     </div>
 
     <div>
-        <h1>Portfolio</h1>
+        <h1>Transaction History</h1>
     </div>
     <div>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
                 <th>Ticker</th>
-                <th>Price</th>
-                <th>Type</th>
+                <th>Init Price</th>
+                <th>Bought/Desired Price</th>
+                <th>Amount</th>
+                <th>Buy/Sell</th>
+                <th>Market/Limit</th>
+                <th>Bought Date</th>
+                <th>Expire Date</th>
+                <th>Action</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="stock: ${userStocks}">
                 <td th:text="${stock.stock.ticker}">Ticker</td>
-                <td th:text="${stock.boughtPrice}">Price</td>
+                <td th:text="${stock.initPrice}">Price</td>
+                <td th:text="${stock.desiredPrice}">Price</td>
+                <td th:text="${stock.amount}">Amount</td>
                 <td th:text="${stock.buyOrSell}">Type</td>
+                <td th:text="${stock.marketOrLimit}">Type</td>
+                <td th:text="${stock.boughtDate}">Type</td>
+                <td th:text="${stock.expireDate}">Type</td>
             </tr>
             </tbody>
         </table>
