--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -88,6 +88,27 @@
     </div>
 
     <div>
+        <h1>Portfolio</h1>
+    </div>
+    <div>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+            <tr>
+                <th>Ticker</th>
+                <th>Shares</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            <tr th:each="stock: ${map}">
+                <td th:text="${stock.key}">Ticker</td>
+                <td th:text="${stock.value}">Shares</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div>
         <h1>Transaction History</h1>
     </div>
     <div>
@@ -95,8 +116,8 @@
             <thead class="thead-dark">
             <tr>
                 <th>Ticker</th>
-                <th>Init Price</th>
-                <th>Bought/Desired Price</th>
+                <th>Market Price</th>
+                <th>Filled Price</th>
                 <th>Amount</th>
                 <th>Buy/Sell</th>
                 <th>Market/Limit</th>
@@ -106,15 +127,22 @@
             </tr>
             </thead>
             <tbody>
+
             <tr th:each="stock: ${userStocks}">
                 <td th:text="${stock.stock.ticker}">Ticker</td>
-                <td th:text="${stock.initPrice}">Price</td>
-                <td th:text="${stock.desiredPrice}">Price</td>
+                <td th:text="${stock.initPrice}">Market Price</td>
+                <td th:text="${stock.desiredPrice}">Filled Price</td>
                 <td th:text="${stock.amount}">Amount</td>
-                <td th:text="${stock.buyOrSell}">Type</td>
-                <td th:text="${stock.marketOrLimit}">Type</td>
-                <td th:text="${stock.boughtDate}">Type</td>
-                <td th:text="${stock.expireDate}">Type</td>
+                <td th:text="${stock.buyOrSell}">Buy/Sell</td>
+                <td th:text="${stock.marketOrLimit}">Market/Limit</td>
+                <td th:text="${stock.boughtDate}">Bought Date</td>
+                <td th:text="${stock.expireDate}">Expire Date</td>
+                <form action="#" th:action="@{/cancelOrder}" method="post">
+                    <td th:if="${stock.marketOrLimit} == limit">
+                        <input type="hidden" name="thisStock" th:value="${stock.id}"/>
+                        <input type="submit" value="Cancel"/>
+                    </td>
+                </form>
             </tr>
             </tbody>
         </table>
