change schedule model, add getOpenTime, getClosedTime to ScheduleRepository change market hours, disable market if not within market hours, show current time/date in user home page

--- a/src/main/resources/templates/add_success.html
+++ b/src/main/resources/templates/add_success.html
@@ -16,7 +16,7 @@
     <br/>
 
     <form action="/admin">
-        <input type="submit" value="Add another stock" />
+        <input type="submit" value="Back to Admin Page" />
     </form>
 </div>
 
