--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -16,6 +16,21 @@
             </p>
             <input type="submit" value="Sign Out" />
         </form>
+        <div id="mytime"></div>
+
+        <script>
+
+            var today = new Date();
+            var day = today.getDay();
+            var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
+            var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+            var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+            var dateTime = date+' '+time;
+
+            document.getElementById("mytime").innerHTML = dateTime + ' <br> Day :- ' + daylist[day];
+
+        </script>
+
     </div>
     <div>
         <h1>Market</h1>
