--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <meta http-equiv="refresh" content="120">
 </head>
 <body>
 <div class="container text-center">
