--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,45 +30,40 @@
     <form action="#" th:action="@{/changeSchedule}" method="post" th:object="${schedule}">
         <label>Monday Hours:</label></br>
         <input type="hidden" name ="day" value="mon"/>
-        <label>Open: </label><input type="number" name="open_time" value=9 step="1" min = "0" max = "23">
-        <label>Close: </label><input type="number" name="close_time" value=16 step="1" min = "0" max = "23">
-        <label>EST</label>
+        <label>Open: </label><input type="time" name="open_time">
+        <label>Close: </label><input type="time" name="close_time">
         <button type="submit">Set</button>
     </form>
 
     <form action="#" th:action="@{/changeSchedule}" method="post" th:object="${schedule}">
         <label>Tuesday Hours:</label></br>
         <input type="hidden" name ="day" value="tue"/>
-        <label>Open: </label><input type="number" name="open_time" value=9 step="1" min = "0" max = "23">
-        <label>Close: </label><input type="number" name="close_time" value=16 step="1" min = "0" max = "23">
-        <label>EST</label>
+        <label>Open: </label><input type="time" name="open_time">
+        <label>Close: </label><input type="time" name="close_time">
         <button type="submit">Set</button>
     </form>
 
     <form action="#" th:action="@{/changeSchedule}" method="post" th:object="${schedule}">
         <label>Wednesday Hours:</label></br>
         <input type="hidden" name ="day" value="wed"/>
-        <label>Open: </label><input type="number" name="open_time" value=9 step="1" min = "0" max = "23">
-        <label>Close: </label><input type="number" name="close_time" value=16 step="1" min = "0" max = "23">
-        <label>EST</label>
+        <label>Open: </label><input type="time" name="open_time">
+        <label>Close: </label><input type="time" name="close_time">
         <button type="submit">Set</button>
     </form>
 
     <form action="#" th:action="@{/changeSchedule}" method="post" th:object="${schedule}">
         <label>Thursday Hours:</label></br>
         <input type="hidden" name ="day" value="thu"/>
-        <label>Open: </label><input type="number" name="open_time" value=9 step="1" min = "0" max = "23">
-        <label>Close: </label><input type="number" name="close_time" value=16 step="1" min = "0" max = "23">
-        <label>EST</label>
+        <label>Open: </label><input type="time" name="open_time">
+        <label>Close: </label><input type="time" name="close_time">
         <button type="submit">Set</button>
     </form>
 
     <form action="#" th:action="@{/changeSchedule}" method="post" th:object="${schedule}">
         <label>Friday Hours:</label></br>
         <input type="hidden" name ="day" value="fri"/>
-        <label>Open: </label><input type="number" name="open_time" value=9 step="1" min = "0" max = "23">
-        <label>Close: </label><input type="number" name="close_time" value=16 step="1" min = "0" max = "23">
-        <label>EST</label>
+        <label>Open: </label><input type="time" name="open_time">
+        <label>Close: </label><input type="time" name="close_time">
         <button type="submit">Set</button>
     </form>
 </div>
