--- a/src/main/resources/templates/login_error.html
+++ b/src/main/resources/templates/login_error.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Insufficient Funds</title>
+    <title>Login Error</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
 <div class="container text-center">
-    <h3>You have insufficient funds in your wallet!</h3>
+    <h3>You need to login as admin first!</h3>
 
-    <form action="/customer">
-        <input type="submit" value="Home" />
+    <form action="/">
+        <input type="submit" value="Go to Main Page" />
     </form>
 </div>
 
