--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to CodeJava Home</title>
+    <title>Home Page</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container text-center">
-    <h1>Welcome to CodeJava.net</h1>
-    <h3><a th:href="@{/users}">List of Users</a></h3>
-    <h3><a th:href="@{/register}">Register</a></h3>
+    <h1>Stock Market Home Page</h1>
+    <h3><a th:href="@{/register}">Register a User</a></h3>
     <h3><a th:href="@{/login}">Login</a></h3>
 </div>
 
